log
Thu Mar 26 11:07:20 PM UTC 2026: 
 tests:  0|6
total_score: 0/60
ffbbe1e
Thu Mar 26 11:07:48 PM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/60
79f2474
Thu Mar 26 11:29:26 PM UTC 2026: 
 tests:  1|5
total_score: 10/60
5bd8f6c
Fri Mar 27 12:10:49 AM UTC 2026: 
 list.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
 tests:  2|5
total_score: 15/60
57c1145
Fri Mar 27 12:13:31 AM UTC 2026: 
 list.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
 tests:  0|0
3e383a0
Fri Mar 27 12:16:58 AM UTC 2026: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  5|4
total_score: 20/60
cffdd15
Fri Mar 27 12:22:39 AM UTC 2026: 
 list.c | 19 ++++++++++++++++---
 1 file changed, 16 insertions(+), 3 deletions(-)
 tests:  9|3
total_score: 30/60
0172edf
Fri Mar 27 01:20:23 AM UTC 2026: 
 list.c | 17 +++++++++++++++--
 1 file changed, 15 insertions(+), 2 deletions(-)
 tests:  10|2
total_score: 40/60
d5f19e2
Fri Mar 27 01:35:22 AM UTC 2026: 
 list.c | 18 ++++++++++++++++++
 1 file changed, 18 insertions(+)
Compilation failed
In file included from test.c:5:
list.c: In function ‘pushCurrent’:
list.c:123:41: error: ‘return’ with a value, in function returning void [-Wreturn-mismatch]
  123 |     if (list -> current == NULL) return NULL; //lista vacia.
      |                                         ^~~~
list.c:121:6: note: declared here
  121 | void pushCurrent(List * list, void * data) {
      |      ^~~~~~~~~~~
258dd2c
Fri Mar 27 01:36:50 AM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|1
total_score: 50/60
8cdc099
Fri Mar 27 01:56:48 AM UTC 2026: 
 list.c | 42 ++++++++++++++++++++++++++++++++++++++----
 1 file changed, 38 insertions(+), 4 deletions(-)
Compilation failed
In file included from test.c:5:
list.c: In function ‘popCurrent’:
list.c:172:29: error: statement with no effect [-Werror=unused-value]
  172 |         nextCurrent -> prev == NULL;
      |                             ^
list.c:159:12: error: unused variable ‘auxCurrent’ [-Werror=unused-variable]
  159 |     void * auxCurrent = list -> current;          // current auxiliar. (puntero)
      |            ^~~~~~~~~~
cc1: all warnings being treated as errors
3887bb3
Fri Mar 27 01:57:54 AM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
list.c: In function ‘popCurrent’:
list.c:164:32: error: ‘nextCurrent’ undeclared (first use in this function); did you mean ‘auxCurrent’?
  164 |     if (prevCurrent == NULL && nextCurrent == NULL){ //current es el unico dato.
      |                                ^~~~~~~~~~~
      |                                auxCurrent
list.c:164:32: note: each undeclared identifier is reported only once for each function it appears in
list.c:159:12: error: unused variable ‘auxCurrent’ [-Werror=unused-variable]
  159 |     void * auxCurrent = list -> current;          // current auxiliar. (puntero)
      |            ^~~~~~~~~~
cc1: all warnings being treated as errors
3e27e0f
Fri Mar 27 01:58:25 AM UTC 2026: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:5:
list.c: In function ‘popCurrent’:
list.c:172:29: error: statement with no effect [-Werror=unused-value]
  172 |         nextCurrent -> prev == NULL;
      |                             ^
cc1: all warnings being treated as errors
faa50ec
Fri Mar 27 01:58:51 AM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
f661ece
